# protowave

./: .gitignore  CLAUDE.md  Cargo.toml  PRD.md  ProtoWave App (standalone).html  README.md
.github/workflows/: ci.yml
crates/protowave-core/: Cargo.toml
crates/protowave-core/src/: id.rs  lib.rs  signing.rs
crates/protowave-proto/: Cargo.toml  build.rs
crates/protowave-proto/proto/protowave/v1/: envelope.proto  federation.proto
crates/protowave-proto/src/: lib.rs
docs/: federation-spec.md
pw-theme/: ProtoWave Add Participant.html  ProtoWave App.html  ProtoWave Empty States.html  ProtoWave Landing.html  ProtoWave Login.html  ProtoWave Mobile.html  ProtoWave Onboarding.html  ProtoWave Reset Password.html  ProtoWave Search.html  ProtoWave Settings.html  ProtoWave Translation Modal.html
server/: Cargo.toml
server/src/: agent.rs  api.rs  attachments.rs  auth.rs  cas.rs  engine.rs  federation.rs  lib.rs  limits.rs  main.rs  models.rs  search.rs  settings.rs  shares.rs  store.rs  store_pg.rs  translate.rs  ws.rs
server/tests/: agent.rs  collab.rs  echo.rs  federation.rs  limits.rs  pg_store.rs  phase2.rs  shares.rs  translation.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/public/extensions/: tally.html
web/src/: App.vue  i18n.ts  main.ts  router.ts  style.css  vite-env.d.ts
web/src/components/: AttachmentCard.vue  BlipEditor.vue  BlipMessage.vue  BuoyStatus.vue  Composer.vue  ExtensionFrame.vue  FolderShareCard.vue  PlaybackDrawer.vue  TideLine.vue  WaveMesh.vue  WavePanel.vue  WaveSidebar.vue
web/src/lib/: api.ts  connection.ts  markdown.ts  protocol.ts  provider.ts  tiptap-decorations.ts  wavemodel.ts
web/src/stores/: profiles.ts  session.ts  waves.ts
web/src/views/: InboxView.vue  LoginView.vue  SettingsView.vue  WaveView.vue
