[workspace]
resolver = "2"
members = [
    "crates/protowave-core",
    "crates/protowave-proto",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

# Versions are =pinned to stay buildable on the workspace MSRV (rustc 1.75).
[workspace.dependencies]
protowave-core = { path = "crates/protowave-core" }
protowave-proto = { path = "crates/protowave-proto" }
prost = "=0.12.6"
prost-build = "=0.12.6"
protox = "=0.6.0"
thiserror = "=1.0.61"
tokio = { version = "=1.36.0", features = ["full"] }
axum = { version = "=0.7.5", features = ["ws"] }
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
curve25519-dalek = "=4.1.3"
rand = "=0.8.5"
hex = "=0.4.3"
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
tokio-tungstenite = "=0.21.0"
futures-util = "=0.3.31"
