[workspace]
resolver = "2"
members = [
    "crates/protowave-core",
    "crates/protowave-proto",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

# Versions are =pinned to stay buildable on the workspace MSRV (rustc 1.75).
[workspace.dependencies]
protowave-core = { path = "crates/protowave-core" }
protowave-proto = { path = "crates/protowave-proto" }
prost = "=0.12.6"
prost-build = "=0.12.6"
protox = "=0.6.0"
thiserror = "=1.0.61"
tokio = { version = "=1.36.0", features = ["full"] }
axum = { version = "=0.7.5", features = ["ws", "multipart"] }
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
curve25519-dalek = "=4.1.3"
rand = "=0.8.5"
hex = "=0.4.3"
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
tokio-tungstenite = "=0.21.0"
futures-util = "=0.3.31"
yrs = "=0.19.2"
argon2 = "=0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "=3.10.1"
async-trait = "=0.1.77"
blake3 = "=1.5.1"
# mmap only: the lz4/zstd docstore codecs pull crates that no longer build
# on rustc 1.75 (lz4_flex 0.11.x yanked; zstd-safe/zstd-sys pairing).
tantivy = { version = "=0.21.1", default-features = false, features = ["mmap"] }
tokio-postgres = { version = "=0.7.10", features = ["with-serde_json-1"] }
deadpool-postgres = "=0.12.1"
tower-http = { version = "=0.5.2", features = ["fs"] }
hyper = { version = "=1.10.1", features = ["client", "http1"] }
hyper-util = { version = "=0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "=0.1.3"
hyper-rustls = { version = "=0.26.0", default-features = false, features = ["http1", "ring", "webpki-roots"] }
fastcdc = "=3.1.0"
