[package]
name = "protowave-core"
description = "ProtoWave core types: federation-qualified IDs and server signing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
ed25519-dalek.workspace = true
curve25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
