[package]
name = "protowave-proto"
description = "ProtoWave wire protocol: protobuf schemas and generated types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
protox.workspace = true
